--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:start": "npm run build && npm start",
     "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "test": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register src/test/*.test.ts\"",
-    "migrate": "postgrator --config postgrator-config.js"
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "postgrator --config postgrator-test-config.js"
   },
   "author": "",
   "license": "ISC",
